--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# macos
+.DS_STORE
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +130,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# examples and cfdis to test
+data
