--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,19 @@
 #
 #    pip-compile requirements.in
 #
+certifi==2022.6.15
+    # via requests
+charset-normalizer==2.1.0
+    # via requests
+idna==3.3
+    # via requests
 pydantic==1.9.1
+    # via -r requirements.in
+requests==2.28.1
     # via -r requirements.in
 typing-extensions==4.3.0
     # via pydantic
+urllib3==1.26.10
+    # via requests
 xmltodict==0.13.0
     # via -r requirements.in
