--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -37,6 +37,6 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: pytest-results-${{ matrix.python-version }}
-          path: ${{REPOSITORY_NAME}}/junit/test-results-${{ matrix.python-version }}.xml
+          path: ${{env.REPOSITORY_NAME}}/junit/test-results-${{ matrix.python-version }}.xml
         # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
