--- a/.github/workflows/lint-actions.yml
+++ b/.github/workflows/lint-actions.yml
@@ -16,12 +16,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: psf/black@22.6.0
         with:
-          options: "--line-length 120 --check --diff ${{env.REPOSITORY_NAME}} tests"
+          options: "--line-length 120 --check --diff cfdibills tests"
   isort:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: jamescurtin/isort-action@master
         with:
-          configuration: "--profile black --filter-files --check-only --diff ${{env.REPOSITORY_NAME}} tests"
+          configuration: "--profile black --filter-files --check-only --diff cfdibills tests"
           requirementsFiles: "requirements.txt requirements_test.txt"
