--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,3 +10,15 @@ repos:
       - id: isort
         name: isort (python)
         args: ["--profile", "black", "--filter-files"]
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: 'v0.961'
+    hooks:
+      - id: mypy
+        args: [--ignore-missing-imports, --pretty]
+        additional_dependencies: [types-requests==2.28.0]
+        verbose: true
+  - repo: https://github.com/MartinThoma/check-pip-compile
+    rev: 0.1.1
+    hooks:
+    - id: check-pip-compile
+      args: ['requirements.in']
