--- a/.github/workflows/req-actions.yml
+++ b/.github/workflows/req-actions.yml
@@ -4,11 +4,14 @@ on:
     branches: [main]
 
 jobs:
-  are-requirements-compiled:
+  are-compiled:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: jpetrucciani/mypy-check@0.930
-        with:
-          mypy_flags: "--ignore-missing-imports --pretty --non-interactive --install-types"
-          path: "cfdibills tests"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements_dev.txt
+      - name: Check requirements.in is compiled
+        run: |
+          pip-compile -q requirements.in && git diff --exit-code -- requirements.txt
