Adding flake8 actions

--- a/.github/workflows/lint-actions.yml
+++ b/.github/workflows/lint-actions.yml
@@ -27,3 +27,21 @@ jobs:
         with:
           mypy_flags: "--ignore-missing-imports --pretty --non-interactive --install-types"
           path: "cfdibills tests"
+  flake8:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: flake8 (*.py)
+        uses: py-actions/flake8@v2
+        with:
+          ignore: "E731,W503,W504"
+          exclude: "__init__.py"
+          max-line-length: "120"
+          args: "--show-source --statistics --filename=*.py cfdibills/ tests/"
+      - name: flake8 (__init__.py)
+        uses: py-actions/flake8@v2
+        with:
+          ignore: "E731,F401,F403,W503"
+          max-line-length: "120"
+          args: "--show-source --statistics --filename=*__init__.py cfdibills/ tests/"
+
