--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,13 +3,18 @@ repos:
     rev: 22.6.0
     hooks:
     -   id: black
-        args: ["--line-length", "120"]
+        args:
+          - --line-length
+          - "120"
   - repo: https://github.com/pycqa/isort
     rev: 5.10.1
     hooks:
       - id: isort
         name: isort (python)
-        args: ["--profile", "black", "--filter-files"]
+        args:
+          - --profile
+          - black
+          - --filter-files
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: 'v0.961'
     hooks:
@@ -27,4 +32,34 @@ repos:
     rev: 0.1.1
     hooks:
     - id: check-pip-compile
-      args: ['requirements.in']
+      args:
+        - requirements.in
+  - repo: https://github.com/pycqa/flake8
+    rev: '4.0.1'
+    hooks:
+    - id: flake8
+      name: flake8 (*.py)
+      files: "(cfdibills/.*)|(tests/.*)"
+      exclude: __init__.py
+      args:
+        - --ignore
+        - "E731,W503,W504"
+        - --filename
+        - "*.py"
+        - --show-source
+        - --statistics
+        - --max-line-length
+        - "120"
+    - id: flake8
+      name: flake8 (__init__.py)
+      files: "(cfdibills/.*)|(tests/.*)"
+      exclude: "tests/samples"
+      args:
+        - --ignore
+        - "E731,F401,F403,W503"
+        - --filename
+        - "*__init__.py"
+        - --show-source
+        - --statistics
+        - --max-line-length
+        - "120"
