--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,6 +32,7 @@ repos:
     rev: 0.1.1
     hooks:
     - id: check-pip-compile
+      name: did pip-compile?
       args:
         - requirements.in
   - repo: https://github.com/pycqa/flake8
