--- a/.github/workflows/build-actions.yml
+++ b/.github/workflows/build-actions.yml
@@ -25,7 +25,11 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Try to build package
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install wheel
+      - name: test-packaging
         run: |
           python setup.py sdist bdist_wheel --formats=gztar || {
             echoerr "It was not possible to create a source distribution."
