--- a/.github/workflows/build-actions.yml
+++ b/.github/workflows/build-actions.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install wheel
+          pip install setuptools wheel
       - name: test-packaging
         run: |
           python setup.py sdist bdist_wheel --formats=gztar || {
