--- a/.github/workflows/build-actions.yml
+++ b/.github/workflows/build-actions.yml
@@ -28,14 +28,14 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel
+          pip install setuptools
       - name: test-packaging
         run: |
-          python setup.py sdist bdist_wheel --formats=gztar || {
+          python setup.py sdist --formats=gztar || {
             echoerr "It was not possible to create a source distribution."
             echo "For more information, consult:"
             echo "  - https://packaging.python.org/tutorials/packaging-projects/#generating-distribution-archives"
-            echo "  - https://docs.python.org/3.6/distutils/sourcedist.html"
+            echo "  - https://setuptools.pypa.io/en/latest/index.html"
             exit 1
           }
           
