--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -3,9 +3,6 @@ on:
   pull_request:
     branches: [main]
 
-env:
-  REPOSITORY_NAME: $(echo "$GITHUB_REPOSITORY" | awk -F / '{print $2}')
-
 jobs:
   test:
 
@@ -28,11 +25,11 @@ jobs:
         run: |
           pip install pytest
           pip install pytest-cov
-          pytest --junitxml=junit/test-results-${{ matrix.python-version }}.xml --cov=${{REPOSITORY_NAME}} --cov-report=xml --cov-report=html tests
+          pytest --junitxml=junit/test-results-${{ matrix.python-version }}.xml --cov=cfdibills --cov-report=xml --cov-report=html tests
       - name: Upload pytest test results
         uses: actions/upload-artifact@v3
         with:
           name: pytest-results-${{ matrix.python-version }}
-          path: ${{env.REPOSITORY_NAME}}/junit/test-results-${{ matrix.python-version }}.xml
+          path: cfdibills/junit/test-results-${{ matrix.python-version }}.xml
         # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
