--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -23,13 +23,13 @@ jobs:
           pip install -e .[test]
       - name: Test with pytest
         run: |
-          pip install pytest
-          pip install pytest-cov
-          pytest --junitxml=junit/test-results-${{ matrix.python-version }}.xml --cov=cfdibills --cov-report=xml --cov-report=html tests
+          pytest --junitxml=junit/test-results-${{ matrix.python-version }}.xml --cov=cfdibills --cov-report=xml tests
       - name: Upload pytest test results
         uses: actions/upload-artifact@v3
         with:
           name: pytest-results-${{ matrix.python-version }}
-          path: cfdibills/junit/test-results-${{ matrix.python-version }}.xml
+          path: |
+            junit/test-results-${{ matrix.python-version }}.xml
+            coverage.xml
         # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
