--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -33,3 +33,20 @@ jobs:
             coverage.xml
         # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
+  codecov:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.9"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .[test]
+      - name: Generate reports
+        run: |
+          pytest --junitxml=test-results.xml --cov=cfdibills --cov-report=xml tests
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v2
