--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -5,12 +5,10 @@ on:
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.8", "3.9"]
-
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
@@ -33,6 +31,20 @@ jobs:
             coverage.xml
         # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
-      - name: Upload one result to codecov
+  codecov:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.9"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .[test]
+      - name: Generate reports
+        run: |
+          pytest --junitxml=test-results.xml --cov=cfdibills --cov-report=xml tests
+      - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v2
-        if: ${{ matrix.python-version}} == "3.9"
