--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ pip-delete-this-directory.txt
 
 # Unit test / coverage reports
 htmlcov/
+junit/
 .tox/
 .nox/
 .coverage
@@ -133,3 +134,6 @@ dmypy.json
 
 # examples and cfdis to test
 data
+
+# from pycharm
+.idea
