--- a/.github/workflows/publish-actions.yml
+++ b/.github/workflows/publish-actions.yml
@@ -5,23 +5,39 @@ on:
 
 jobs:
   deploy:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: '3.x'
+        python-version: '3.9'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install setuptools
     - name: Build package
-      run: python setup.py sdist bdist_wheel
+      run: python setup.py sdist
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
+
+  codecov:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.9"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .[test]
+      - name: Generate reports
+        run: |
+          pytest --junitxml=test-results.xml --cov=cfdibills --cov-report=xml tests
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v2
