Changing codecov settings

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,2 +1,12 @@
 ignore:
   - "*/tests/*”
+
+coverage:
+  status:
+    project:
+      default:
+        informational: true
+    patch:
+      default:
+        informational: true
+
