--- a/.gitignore
+++ b/.gitignore
@@ -138,7 +138,7 @@ docs/_autosummary
 # Pyre type checker
 .pyre/
 
-# examples and cfdis to test
+# examples and schemas to test
 data
 
 # from pycharm
